2011-01-30  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* lo-sysdep.cc (opendir): On error, free allocated DIR object
	before returning.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* eigs-base.cc: Remove #endif corresponding to "#ifdef HAVE_ARPACK",
	not the one that matched "#if !defined (CXX_NEW_FRIEND_TEMPLATE_DECL)".

2011-01-28  John W. Eaton  <jwe@octave.org>

	* eigs-base.cc (EigsRealNonSymmetricFunc,
	EigsRealNonSymmetricMatrix, EigsRealNonSymmetricMatrixShift):
	Initialize eig_vec2 to 0 before calling dneupd.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* eigs-base.cc: Assume we have ARPACK.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse<T>::assign (const idx_vector&, const idx_vector&,
	const Sparse<T>&)): Allow 0x0 LHS with colon dimensions to
	inherit dimensions from RHS.  Fix tests.  Bug #32263.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* oct-refcount.h: Strip trailing whitespace.

2011-01-24  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* SparseQR.h (class SparseQR::SparseQR_reps): Disallow copying.
	* Array.cc (class rec_permute_helper, class rec_index_helper,
	class  rec_resize_helper): Likewise.
	* cmd-edit.cc (class default_command_editor): Likewise.

2011-01-22  Jaroslav Hajek  <highegg@gmail.com>

	* oct-refcount.h: New source.
	* Makefile.am: Add it here.

	* Array.h: Use octave_refcount for refcounting.
	* Sparse.h: Ditto.
	* SparseCmplxQR.h: Ditto.
	* SparseQR.h: Ditto.
	* idx-vector.h: Ditto.
	* oct-shlib.h: Ditto.
	* sparse-base-chol.h: Ditto.

2011-01-21  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* oct-fftw.h (class octave_fftw_planner): Disallow copying
	(class octave_float_fftw_planner): Likewise.
	* oct-sort.h (class octave_sort): Likewise.
	(struct oct_sort::MergeState): Likewise.
	* SparseCmplxQR.h (class SparseComplexQR::SparseComplexQR_rep):
	Likewise.
	* sparse-base-chol.h (class sparse_base_cho::sparse_base_chol_rep):
	Likewise.

2011-01-21  John W. Eaton  <jwe@octave.org>
